# scrounge-ntfs

./: .cvsignore  .gitignore  AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  NEWS  README  autogen.sh  config.win32.h  configure.in
doc/: Makefile.am  scrounge-ntfs.8
src/: .cvsignore  Makefile.am  StdAfx.cpp  StdAfx.h  compat.c  compat.h  debug.h  drive.cpp  drive.h  list.c  locks.h  main.c  memref.h  misc.c  ntfs.c  ntfs.h  ntfsx.c  ntfsx.h  posix.c  scrounge.c  scrounge.h  search.c  unicode.c  usuals.h  win32.c
win32/: .cvsignore  Makefile.am  win32.dsp  win32.dsw  win32.sln  win32.vcproj
