bin_PROGRAMS = scrounge-ntfs

scrounge_ntfs_SOURCES = compat.c compat.h debug.h drive.h list.c locks.h main.c memref.h \
                        misc.c ntfs.c ntfs.h ntfsx.h ntfsx.c posix.c scrounge.c scrounge.h \
                        search.c unicode.c usuals.h

scrounge_ntfs_CFLAGS = -I${top_srcdir}

EXTRA_DIST = win32.c
